--- a/awpl-exe-panch-tulsi-oil.html
+++ b/awpl-exe-panch-tulsi-oil.html
@@ -168,6 +168,7 @@
         .rating-text {
             color: #666;
             font-size: 14px;
+            white-space: nowrap;
         }
         
         .publication-date {
