--- a/awpl-adidoc-pravahi-kwath.html
+++ b/awpl-adidoc-pravahi-kwath.html
@@ -1169,13 +1169,13 @@
                         <div class="purchase-options">
                             <div class="whatsapp-container">
                                 <div class="recommended-badge">Recommended</div>
-                                <a href="https://wa.me/919876543210?text=Hi%2C%20I%20want%20to%20order%20AWPL%20ADIDOC%20PRAVAHI%20KWATH%20at%20DP%20price%20%E2%82%B9383" class="purchase-btn whatsapp-btn enhanced-whatsapp" target="_blank">
+                                <a href="https://wa.me/qr/7OMOKCBAC5HKD1?text=Hi%2C%20I%20want%20to%20order%20AWPL%20ADIDOC%20PRAVAHI%20KWATH%20at%20DP%20price%20%E2%82%B9383" class="purchase-btn whatsapp-btn enhanced-whatsapp" target="_blank">
                                     <i class="fab fa-whatsapp"></i>
                                     <span>Order via WhatsApp</span>
                                     <div class="pulse-ring"></div>
                                 </a>
                             </div>
-                            <a href="https://www.asclepiuswellness.com/product/addiction-recovery/adidoc-pravahi-kwath/" class="purchase-btn website-btn" target="_blank">
+                            <a href="https://www.asclepiuswellness.com/product/wellness-product/adidoc-pravahi-kwath/" class="purchase-btn website-btn" target="_blank">
                                 <i class="fas fa-globe"></i>
                                 Visit Official Website
                             </a>
@@ -1426,7 +1426,7 @@
                         <i class="fab fa-twitter"></i>
                         <span>Twitter</span>
                     </a>
-                    <a href="https://wa.me/?text=Check%20out%20this%20amazing%20AWPL%20ADIDOC%20PRAVAHI%20KWATH!%20https://awplcompany.in/awpl-adidoc-pravahi-kwath.html" target="_blank" class="social-share-btn whatsapp">
+                    <a href="https://wa.me/qr/7OMOKCBAC5HKD1?text=Check%20out%20this%20amazing%20AWPL%20ADIDOC%20PRAVAHI%20KWATH!%20https://awplcompany.in/awpl-adidoc-pravahi-kwath.html" target="_blank" class="social-share-btn whatsapp">
                         <i class="fab fa-whatsapp"></i>
                         <span>WhatsApp</span>
                     </a>
