Update product pages and contact information

--- a/awpl-exe-herbal-tea.html
+++ b/awpl-exe-herbal-tea.html
@@ -1143,7 +1143,7 @@
                         <div class="purchase-options">
                             <div class="whatsapp-container">
                                 <div class="recommended-badge">Recommended</div>
-                                <a href="https://wa.me/qr/7OMOKCBAC5HKD1?text=Hi%2C%20I%20want%20to%20order%20AWPL%20Exe%20Herbal%20Tea%20at%20DP%20price%20%E2%82%B9370" class="purchase-btn whatsapp-btn enhanced-whatsapp" target="_blank">
+                                <a href="https://wa.me/916398795334?text=Hi%2C%20I%20want%20to%20order%20AWPL%20Exe%20Herbal%20Tea%20at%20DP%20price%20%E2%82%B9370" class="purchase-btn whatsapp-btn enhanced-whatsapp" target="_blank">
                                     <i class="fab fa-whatsapp"></i>
                                     <span>Order via WhatsApp</span>
                                     <div class="pulse-ring"></div>
@@ -1374,7 +1374,7 @@
                         <i class="fab fa-twitter"></i>
                         <span>Twitter</span>
                     </a>
-                    <a href="https://wa.me/qr/7OMOKCBAC5HKD1?text=Check%20out%20this%20amazing%20AWPL%20Exe%20Herbal%20Tea!%20https://awplcompany.in/awpl-exe-herbal-tea.html" target="_blank" class="social-share-btn whatsapp">
+                    <a href="whatsapp://send?text=Check%20out%20this%20amazing%20AWPL%20Exe%20Herbal%20Tea!%20https://awplcompany.in/awpl-exe-herbal-tea.html" target="_blank" class="social-share-btn whatsapp">
                         <i class="fab fa-whatsapp"></i>
                         <span>WhatsApp</span>
                     </a>
