--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                         <div class="whatsapp-contact">
                             <p>For quick assistance and direct communication, reach out to us on WhatsApp:</p>
                             <div class="whatsapp-button-container">
-                                <a href="https://wa.me/qr/7OMOKCBAC5HKD1" class="whatsapp-btn-modern" target="_blank">
+                                <a href="https://wa.me/916398795334" class="whatsapp-btn-modern" target="_blank">
                                     <div class="whatsapp-icon-wrapper">
                                         <i class="fab fa-whatsapp"></i>
                                     </div>
