--- a/awpl-exe-panch-tulsi-oil.html
+++ b/awpl-exe-panch-tulsi-oil.html
@@ -1142,7 +1142,7 @@
                         <div class="purchase-options">
                             <div class="whatsapp-container">
                                 <div class="recommended-badge">Recommended</div>
-                                <a href="https://wa.me/qr/7OMOKCBAC5HKD1?text=Hi%2C%20I%20want%20to%20order%20AWPL%20EXE%20Panch%20Tulsi%20Oil%20at%20DP%20price%20%E2%82%B9349" class="purchase-btn whatsapp-btn enhanced-whatsapp" target="_blank">
+                                <a href="https://wa.me/916398795334?text=Hi%2C%20I%20want%20to%20order%20AWPL%20EXE%20Panch%20Tulsi%20Oil%20at%20DP%20price%20%E2%82%B9349" class="purchase-btn whatsapp-btn enhanced-whatsapp" target="_blank">
                                     <i class="fab fa-whatsapp"></i>
                                     <span>Order via WhatsApp</span>
                                     <div class="pulse-ring"></div>
@@ -1373,7 +1373,7 @@
                         <i class="fab fa-twitter"></i>
                         <span>Twitter</span>
                     </a>
-                    <a href="https://wa.me/qr/7OMOKCBAC5HKD1?text=Check%20out%20this%20amazing%20AWPL%20EXE%20Panch%20Tulsi%20Oil!%20https://awplcompany.in/awpl-exe-panch-tulsi-oil.html" target="_blank" class="social-share-btn whatsapp">
+                    <a href="whatsapp://send?text=Check%20out%20this%20amazing%20AWPL%20EXE%20Panch%20Tulsi%20Oil!%20https://awplcompany.in/awpl-exe-panch-tulsi-oil.html" target="_blank" class="social-share-btn whatsapp">
                         <i class="fab fa-whatsapp"></i>
                         <span>WhatsApp</span>
                     </a>
